add api auth activation user part 2
