# be-core/src/controllers/auth.controller.ts
@@ -23,7 +23,27 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().required(),
-    password: Yup.string().required(),
+    password: Yup.string()
+      .required()
+      .min(6, "Password must be at least 6 characters.")
+      .test(
+        "at-least-one-uppercase-letter", 
+        "Password must contain at least one uppercase letter.",
+        (value) => {
+          if(!value) return false;
+          const regex = /^(?=.*[A-Z])/;
+          return regex.test(value);
+        }
+      )
+      .test(
+        "at-least-one-number", 
+        "Password must contain at least one number.",
+        (value) => {
+          if(!value) return false;
+          const regex = /^(?=.*\d)/;
+          return regex.test(value);
+        }
+      ),
     confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "Password must be matched.")
 })
 
@@ -31,6 +51,12 @@ export default {
     async register(req: Request, res: Response) {
       /**
        #swagger.tags = ['Auth']
+       #swagger.requestBody = {
+          required: true,
+          schema: {
+            $ref: "#/components/schemas/RegisterRequest"
+          }
+        }
        */
       const {
         fullName,
@@ -88,11 +114,12 @@ export default {
             { username: identifier },
             { email: identifier },
           ],
+          isActive: true,
         });
 
         if (!userByIdentifier) {
           return res.status(403).json({
-            message: "User not found!",
+            message: "User not found or not active!",
             data: null,
           });
         }
@@ -141,6 +168,44 @@ export default {
       res.status(200).json({
           message: "Success get user profile!",
           data: result,
+        });
+      } catch (error) {
+        const err = error as unknown as Error;
+        res.status(400).json({
+            message: err.message,
+            data: null,
+        })
+      }
+    },
+    async activation(req: Request, res: Response) {
+      /**
+       #swagger.tags = ['Auth']
+       #swagger.requestBody = {
+        required: true,
+        schema: {
+          $ref: "#/components/schemas/ActivationRequest"
+        }
+       }
+       */
+      try {
+        const { code } = req.body as {code: string};
+
+        const user = await UserModel.findOneAndUpdate({ 
+          activationCode: code, 
+        }, {
+          isActive: true,
+        }, {
+          new: true,
+        });
+        if (!user) {
+          return res.status(404).json({
+            message: "User not found!",
+            data: null,
+          });
+        }
+        res.status(200).json({
+          message: "User successfully activated!",
+          data: user,
         });
       } catch (error) {
         const err = error as unknown as Error;
